# chip8-emu

./: .dir-locals.el  .gitignore  CMakeLists.txt  README.md  build.sh  chip8.cpp  main.cpp
include/: chip8.hpp
